# django-airports-xtd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_change.yaml  feature_request.yaml  housekeeping.yaml
.github/workflows/: publish.yml
airports/: admin.py  models.py
airports/management/commands/: airports.py
airports/migrations/: 0001_initial.py
docs/: _config.yml  configuration.md  contributing.md  development.md  index.md  installation.md  release-notes.md  usage.md
test_project/: manage.py
test_project/test_app/: settings.py
test_project/test_app/tests/: test_models.py
